--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <input type='text' id='InputPassword' placeholder='Please enter password ...'>
     <p></p>
     <button type='button' onclick='IfElse()'>Click to check password.</button>
+    <a href='OnMouseOver.html'>Click to go for some fancy animation!</a>
     <script type='text/javascript' src='UserInteraction.js'></script>
   </body>
 </html>
